--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <groupId>org.springframework</groupId>
     <artifactId>spring-context</artifactId>
     <version>6.2.3</version>
+   <scope>runtime</scope>
 </dependency>
 
     <dependency>
